Fix and add tests.

--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
     "name": "uri.js",
     "description": "URI Parser (and soon to be URI encoder) in Javascript.",
-    "version": 0.1,
+    "version": "v0.1.0",
     "repository": {
         "type": "git",
         "url": "git@github.com:nathggns/uri.js.git"
+    },
+    "devDependencies": {
+        "mocha": "1.11.0",
+        "should": "1.2.2"
     }
 }
