--- a/package.json
+++ b/package.json
@@ -1,13 +1,36 @@
 {
-    "name": "uri.js",
-    "description": "URI Parser (and soon to be URI encoder) in Javascript.",
-    "version": "v0.1.0",
-    "repository": {
-        "type": "git",
-        "url": "git@github.com:nathggns/uri.js.git"
-    },
-    "devDependencies": {
-        "mocha": "1.11.0",
-        "should": "1.2.2"
+  "name": "uri.js",
+  "description": "URI Parser (and soon to be URI encoder) in Javascript.",
+  "version": "0.1.0",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:nathggns/uri.js.git"
+  },
+  "devDependencies": {
+    "mocha": "1.11.0",
+    "should": "1.2.2",
+    "grunt": "~0.4.1",
+    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-jshint": "~0.4.0",
+    "grunt-contrib-watch": "~0.3.1",
+    "grunt-contrib-concat": "~0.1.3",
+    "grunt-mocha-cli": "~1.0.6"
+  },
+  "author": {
+    "name": "Nathaniel Higgins",
+    "email": "nat@nath.is",
+    "url": "http://nath.is"
+  },
+  "bugs": {
+    "url": "https://github.com/nathggns/uri.js/issues"
+  },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/nathggns/uri.js/blob/master/LICENSE-MIT"
     }
+  ],
+  "engines": {
+    "node": ">= 0.10.0"
+  }
 }
