--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "grunt-contrib-jshint": "~0.4.0",
     "grunt-contrib-watch": "~0.3.1",
     "grunt-contrib-concat": "~0.1.3",
-    "grunt-mocha-cli": "~1.0.6"
+    "grunt-mocha-cli": "~1.0.6",
+    "grunt-cli": "~0.1.7"
   },
   "author": {
     "name": "Nathaniel Higgins",
